@@ -1,3 +1,8 @@
+2005-05-19  Per Bothner  <per@bothner.com>
+
+	* misc-test.scm (test-opt-args): New function.
+	Tests, among other things, Savannah bug #10613.
+
 2005-05-17  Per Bothner  <per@bothner.com>
 
 	* misc-test.scm: Change fluid-let test result to match new semantics.
